Add media queries for screen sizes of 1350px

--- a/end.html
+++ b/end.html
@@ -33,20 +33,22 @@
     <section>
         <div id="hero-image"><img src="/assets/images/command-module.jpeg" alt="A picture of the command module about to enter the earths atmosphere"></div>
     </section>
-    <section id="launch">
-        <div id="launch-info">
-            <h2>Return to earth</h2>
-            <br>
-            <p>
-                At 00:56 EDT the vehicle made a burn that removed it from the moons orbit and it went on a return trajectory towards earth.
-                when the command module re entered the earths atmosphere at 12:35 EDT after 3 days of travel it became engulfed by plasma 
-                due to its speed and the atmosphere's thickness, it briefly lost radio contact when this happened. At 12:51 EDT the commang 
-                module lands in the pacific ocean and are picked up by a recovery team. They were sprayed with a disenfectant as a 
-                precaution agains pathogens that might have been on the moon.
-            </p>
-        </div>
-        <div id="launch-img"> <img src="assets/images/re-entry-burn.jpg" alt="A picture of the saturn v mid flight"></div>
-    </section>
+    <section id="launch-background">
+        <section id="launch">
+            <div id="launch-info">
+                <h2>Return to earth</h2>
+                <br>
+                <p>
+                    At 00:56 EDT the vehicle made a burn that removed it from the moons orbit and it went on a return trajectory towards earth.
+                    when the command module re entered the earths atmosphere at 12:35 EDT after 3 days of travel it became engulfed by plasma 
+                    due to its speed and the atmosphere's thickness, it briefly lost radio contact when this happened. At 12:51 EDT the commang 
+                    module lands in the pacific ocean and are picked up by a recovery team. They were sprayed with a disenfectant as a 
+                    precaution agains pathogens that might have been on the moon.
+                </p>
+            </div>
+            <div id="launch-img"> <img src="assets/images/re-entry-burn.jpg" alt="A picture of the saturn v mid flight"></div>
+        </section>
+    </section>  
     <section id="seperation">
         <div id="seperation-info">
             <h2>The quarantine</h2>
@@ -60,21 +62,23 @@
         </div>
         <div id="seperation-img"><img src="assets/images/quarantine-trailer.jpg" alt="A picture of the eagle lander module seperated from the command module, in orbit of the moon"></div>
     </section>
-    <section id="landing">
-        <div id="landing-info">
-            <h2>End of the mission</h2>
-            <br>
-            <p>
-                After 21 days of the astronauts being quarantined they were deeemed healthy and they were allowed to leave. That was the end of the apollo 11 mission, 
-                the first time man had set foot on a completely foreign celestial body and it lasted around 8 days. It is revered and looked as a moment of triumph 
-                and an example of humanity's greatness. The mission was widely considered successful in nearly every respect.
-            </p>
-        </div>
-        <div id="landing-img"><img src="assets/images/celebration.jpg" alt="A picture of an astronaut on the moon"></div>
+    <section id="landing-background">
+        <section id="landing">
+            <div id="landing-info">
+                <h2>End of the mission</h2>
+                <br>
+                <p>
+                    After 21 days of the astronauts being quarantined they were deeemed healthy and they were allowed to leave. That was the end of the apollo 11 mission, 
+                    the first time man had set foot on a completely foreign celestial body and it lasted around 8 days. It is revered and looked as a moment of triumph 
+                    and an example of humanity's greatness. The mission was widely considered successful in nearly every respect.
+                </p>
+            </div>
+            <div id="landing-img"><img src="assets/images/celebration.jpg" alt="A picture of an astronaut on the moon"></div>
+        </section>
     </section>
     <section id="vid-section">
            <div id="vid">
-            <iframe width="1024" height="567" src="https://www.youtube.com/embed/qifHM32AHvw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="66%" height="500" src="https://www.youtube.com/embed/qifHM32AHvw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
            </div>
     </section>
     <footer>
