--- a/index.html
+++ b/index.html
@@ -33,19 +33,21 @@
     <section>
         <div id="hero-image"><img src="/assets/images/original.jpg" alt="picture of saturn v taking off"></div>
     </section>
-    <section id="launch">
-        <div id="launch-info">
-            <h2>The launch</h2>
-            <br>
-            <p>The appolo 11 mission began with the saturn V vehicle being launched at 9:32 a.m. EDT july 16 1969.
-                It was launched from  the Kennedy Space Center's Launch Complex Pad 39A, with a crew of three men Neil 
-                Armstrong, Buzz Aldrin and MIcheal Collins inside the command module.At 12:22 EDT the engines of 
-                the third stage of the saturn v ignite to lift the command module out of earth orbit sending it 
-                towards the moon.
-            </p>
-        </div>
-        <div id="launch-img"> <img src="assets/images/saturn-v-flight.jpg" alt="A picture of the saturn v mid flight"></div>
-    </section>
+    <section id="launch-background">
+        <section id="launch">
+            <div id="launch-info">
+                <h2>The launch</h2>
+                <br>
+                <p>The appolo 11 mission began with the saturn V vehicle being launched at 9:32 a.m. EDT july 16 1969.
+                    It was launched from  the Kennedy Space Center's Launch Complex Pad 39A, with a crew of three men Neil 
+                    Armstrong, Buzz Aldrin and MIcheal Collins inside the command module.At 12:22 EDT the engines of 
+                    the third stage of the saturn v ignite to lift the command module out of earth orbit sending it 
+                    towards the moon.
+                </p>
+            </div>
+            <div id="launch-img"> <img src="assets/images/saturn-v-flight.jpg" alt="A picture of the saturn v mid flight"></div>
+        </section>
+    </section> 
     <section id="seperation">
         <div id="seperation-info">
             <h2>The seperation</h2>
@@ -58,29 +60,31 @@
         </div>
         <div id="seperation-img"><img src="assets/images/eagle-module.jpg" alt="A picture of the eagle lander module seperated from the command module, in orbit of the moon"></div>
     </section>
-    <section id="landing">
-        <div id="landing-info">
-            <h2>The landing</h2>
-            <br>
-            <p>When the eagle was descending towards the moon, Neil Armstrong was
-                having difficulty finding a place to land, but luckily he found a 
-                smooth place to land with just 25 seconds of fuel to spare. They 
-                landed on July 20 1969 at 4:18 p.m. EDT.At around 10:40-10:56 p.m. 
-                EDT Neil Armstrong got out of the lunar module hatch and started 
-                going down the nine step ladder. When he was at the second step he pulled a 
-                ring that deployed a tv camera. This camera broadcasted him going down to 
-                the moons surface live to people on earth.At 10:56 p.m. Neil Armstrong takes 
-                his first step on the moon and says his 
-                famous quote "That's one small step for man, one giant leap for mankind.".
-                This moment was the first time in history a man had set foot on a celestial
-                body that was not earth.
-            </p>
-        </div>
-        <div id="landing-img"><img src="assets/images/apollofootprint.jpg" alt="A picture of an astronaut on the moon"></div>
+    <section id="landing-background">
+        <section id="landing">
+            <div id="landing-info">
+                <h2>The landing</h2>
+                <br>
+                <p>When the eagle was descending towards the moon, Neil Armstrong was
+                    having difficulty finding a place to land, but luckily he found a 
+                    smooth place to land with just 25 seconds of fuel to spare. They 
+                    landed on July 20 1969 at 4:18 p.m. EDT.At around 10:40-10:56 p.m. 
+                    EDT Neil Armstrong got out of the lunar module hatch and started 
+                    going down the nine step ladder. When he was at the second step he pulled a 
+                    ring that deployed a tv camera. This camera broadcasted him going down to 
+                    the moons surface live to people on earth.At 10:56 p.m. Neil Armstrong takes 
+                    his first step on the moon and says his 
+                    famous quote "That's one small step for man, one giant leap for mankind.".
+                    This moment was the first time in history a man had set foot on a celestial
+                    body that was not earth.
+                </p>
+            </div>
+            <div id="landing-img"><img src="assets/images/apollofootprint.jpg" alt="A picture of an astronaut on the moon"></div>
+        </section>
     </section>
     <section id="vid-section">
            <div id="vid">
-            <iframe width="1024" height="567" src="https://www.youtube.com/embed/S9HdPi9Ikhk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="66%" height="500" src="https://www.youtube.com/embed/S9HdPi9Ikhk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
            </div>
     </section>
     <footer>
