--- a/middle.html
+++ b/middle.html
@@ -33,16 +33,18 @@
     <section>
         <div id="hero-image"><img src="/assets/images/moon-landing.jpg" alt="a picture of an astronaut on the moons surface"></div>
     </section>
-    <section id="launch">
-        <div id="launch-info">
-            <h2>Nixon's call to the moon</h2>
-            <br>
-            <p>
-                While they were on the surface of the moon they recieved a phone call  at 23:48 EDT from the man who was the us president in the oval office at the time Richard Nixon he talked about what a proud
-                moment this was for all of humanity and especially anyone american.
-            </p>
-        </div>
-        <div id="launch-img"> <img src="assets/images/nixon.jpg" alt="A picture of the saturn v mid flight"></div>
+    <section id="launch-background">
+        <section id="launch">
+            <div id="launch-info">
+                <h2>Nixon's call to the moon</h2>
+                <br>
+                <p>
+                    While they were on the surface of the moon they recieved a phone call  at 23:48 EDT from the man who was the us president in the oval office at the time Richard Nixon he talked about what a proud
+                    moment this was for all of humanity and especially anyone american.
+                </p>
+            </div>
+            <div id="launch-img"> <img src="assets/images/nixon.jpg" alt="A picture of the saturn v mid flight"></div>
+        </section>
     </section>
     <section id="seperation">
         <div id="seperation-info">
@@ -54,22 +56,24 @@
         </div>
         <div id="seperation-img"><img src="assets/images/moon.jpg" alt="A picture of the eagle lander module seperated from the command module, in orbit of the moon"></div>
     </section>
-    <section id="landing">
-        <div id="landing-info">
-            <h2>Crew Reunited</h2>
-            <br>
-            <p>
-                Neil armstron and Buzz aldrin got in the lunar module ascent stage and launched up towards the command module which was in orbit of the moon.
-                They left behind the descent stage, a few experiments, cameras and the american flag which they planted on the surface of the moon. They 
-                brought with them rocks from the moon and film from their cameras. At 17:35 EDT the lunar module ascent stage docked with the command module
-                and and so began their return to earth.
-            </p>
-        </div>
-        <div id="landing-img"><img src="assets/images/eagle-launch.jpg" alt="A picture of an astronaut on the moon"></div>
+    <section id="landing-background">
+        <section id="landing">
+            <div id="landing-info">
+                <h2>Crew Reunited</h2>
+                <br>
+                <p>
+                    Neil armstron and Buzz aldrin got in the lunar module ascent stage and launched up towards the command module which was in orbit of the moon.
+                    They left behind the descent stage, a few experiments, cameras and the american flag which they planted on the surface of the moon. They 
+                    brought with them rocks from the moon and film from their cameras. At 17:35 EDT the lunar module ascent stage docked with the command module
+                    and and so began their return to earth.
+                </p>
+            </div>
+            <div id="landing-img"><img src="assets/images/eagle-launch.jpg" alt="A picture of an astronaut on the moon"></div>
+        </section>
     </section>
     <section id="vid-section">
            <div id="vid">
-            <iframe width="1024" height="567" src="https://www.youtube.com/embed/VLyJ9FHDO-c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="66%" height="500" src="https://www.youtube.com/embed/VLyJ9FHDO-c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
            </div>
     </section>
     <footer>
