Add new way to size iframes

--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
     </section> 
     <section id="seperation">
         <div id="seperation-info">
-            <h2>The seperation</h2>
             <br>
             <p>At 13:26 EDT Neil Armstrong and Buzz Aldrin entered the Eagle 
                 lunar lander and seperated from Micheal Collins who remained in
@@ -84,7 +83,7 @@
     </section>
     <section id="vid-section">
            <div id="vid">
-            <iframe width="66%" height="500" src="https://www.youtube.com/embed/S9HdPi9Ikhk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/S9HdPi9Ikhk" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
            </div>
     </section>
     <footer>
