--- a/end.html
+++ b/end.html
@@ -78,7 +78,7 @@
     </section>
     <section id="vid-section">
            <div id="vid">
-            <iframe width="66%" height="500" src="https://www.youtube.com/embed/qifHM32AHvw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="850" height="500" src="https://www.youtube.com/embed/qifHM32AHvw" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
            </div>
     </section>
     <footer>
