Make sure code is w3c and jigsaw valid

--- a/middle.html
+++ b/middle.html
@@ -73,7 +73,7 @@
     </section>
     <section id="vid-section">
            <div id="vid">
-            <iframe width="850" height="500" src="https://www.youtube.com/embed/VLyJ9FHDO-c" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/VLyJ9FHDO-c" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
            </div>
     </section>
     <footer>
