Add some media queries

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     </section> 
     <section id="seperation">
         <div id="seperation-info">
+            <h2>The seperation</h2>
             <br>
             <p>At 13:26 EDT Neil Armstrong and Buzz Aldrin entered the Eagle 
                 lunar lander and seperated from Micheal Collins who remained in
