Fix hero image bug

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </nav>
     </header>
     <section>
-        <div id="hero-image"><img src="/assets/images/original.jpg" alt="picture of saturn v taking off"></div>
+        <div id="hero-image"><img src="assets/images/original.jpg" alt="picture of saturn v taking off"></div>
     </section>
     <section id="launch-background">
         <section id="launch">
