Fix hero image on other sites

--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
         </nav>
     </header>
     <section>
-        <div id="hero-image"><img src="/assets/images/contact.jpg" alt="A picture of an astronaut on the moon standing next to the lunar lander"></div>
+        <div id="hero-image"><img src="assets/images/contact.jpg" alt="A picture of an astronaut on the moon standing next to the lunar lander"></div>
     </section>
     <section id="contact">
         <div class="contact-section">
