Rename html sections and remove some css!

--- a/middle.html
+++ b/middle.html
@@ -37,45 +37,41 @@
         <div id="hero-image"><img src="assets/images/moon-landing.jpg" alt="a picture of an astronaut on the moons surface"></div>
     </section>
 
-    <section id="launch-background">
-        <section id="launch">
-            <div id="launch-info">
-                <h2>Nixon's call to the moon</h2>
-                <br>
-                <p>
-                    While they were on the surface of the moon they recieved a phone call  at 23:48 EDT from the man who was the us president in the oval office at the time Richard Nixon he talked about what a proud
-                    moment this was for all of humanity and especially anyone american.
-                </p>
-            </div>
-            <div id="launch-img"> <img src="assets/images/nixon.jpg" alt="A picture of the saturn v mid flight"></div>
-        </section>
+    <section id="section1">
+        <div id="section1-info">
+            <h2>Nixon's call to the moon</h2>
+            <br>
+            <p>
+                While they were on the surface of the moon they recieved a phone call  at 23:48 EDT from the man who was the us president in the oval office at the time Richard Nixon he talked about what a proud
+                moment this was for all of humanity and especially anyone american.
+            </p>
+        </div>
+        <div id="section1-img"> <img src="assets/images/nixon.jpg" alt="A picture of the saturn v mid flight"></div>
     </section>
 
-    <section id="seperation">
-        <div id="seperation-info">
+    <section id="section2">
+        <div id="section2-info">
             <h2>End of the moonwalk</h2>
             <br>
             <p>
                 Neil Armstrong and Buzz Aldrin get back into the eagle and prepare to meet with the command module at around 01:11 EDT.
             </p>
         </div>
-        <div id="seperation-img"><img src="assets/images/moon.jpg" alt="A picture of the eagle lander module seperated from the command module, in orbit of the moon"></div>
+        <div id="section2-img"><img src="assets/images/moon.jpg" alt="A picture of the eagle lander module seperated from the command module, in orbit of the moon"></div>
     </section>
 
-    <section id="landing-background">
-        <section id="landing">
-            <div id="landing-info">
-                <h2>Crew Reunited</h2>
-                <br>
-                <p>
-                    Neil armstron and Buzz aldrin got in the lunar module ascent stage and launched up towards the command module which was in orbit of the moon.
-                    They left behind the descent stage, a few experiments, cameras and the american flag which they planted on the surface of the moon. They 
-                    brought with them rocks from the moon and film from their cameras. At 17:35 EDT the lunar module ascent stage docked with the command module
-                    and and so began their return to earth.
-                </p>
-            </div>
-            <div id="landing-img"><img src="assets/images/eagle-launch.jpg" alt="A picture of an astronaut on the moon"></div>
-        </section>
+    <section id="section3">
+        <div id="section3-info">
+            <h2>Crew Reunited</h2>
+            <br>
+            <p>
+                Neil armstron and Buzz aldrin got in the lunar module ascent stage and launched up towards the command module which was in orbit of the moon.
+                They left behind the descent stage, a few experiments, cameras and the american flag which they planted on the surface of the moon. They 
+                brought with them rocks from the moon and film from their cameras. At 17:35 EDT the lunar module ascent stage docked with the command module
+                and and so began their return to earth.
+            </p>
+        </div>
+        <div id="section3-img"><img src="assets/images/eagle-launch.jpg" alt="A picture of an astronaut on the moon"></div>
     </section>
 
     <section id="vid-section">
