Remove images and make text responsive

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a href="end.html">End</a>
                 </li>
                 <li>
-                    <a href="middle.html">Middle</a>
+                    <a href="middle.html">Middle</a> 
                 </li>
                 <li>
                     <a href="index.html" class="active">Beginning</a>
@@ -33,9 +33,10 @@
         </nav>
     </header>
 
-    <section>
-        <div id="hero-image"><img src="assets/images/original.jpg" alt="picture of saturn v taking off"></div>
-    </section>
+    
+    <div id="hero-image">
+            <img class="img-fluid" src="assets/images/original.jpg" alt="picture of saturn v taking off"/>
+    </div>
 
     <section id="section1">
         <div id="section1-info">
@@ -49,7 +50,6 @@
                 towards the moon.
                 </p>
         </div>
-        <div id="section1-img"> <img src="assets/images/saturn-v-flight.jpg" alt="A picture of the saturn v mid flight"></div>
     </section>
 
     <section id="section2">
@@ -62,7 +62,6 @@
                 eagle was to descend towards the moon and land on it
             </p>
         </div>
-        <div id="section2-img"><img src="assets/images/eagle-module.jpg" alt="A picture of the eagle lander module seperated from the command module, in orbit of the moon"></div>
     </section>
 
     <section id="section3">
@@ -83,7 +82,6 @@
                 body that was not earth.
             </p>
         </div>
-        <div id="section3-img"><img src="assets/images/apollofootprint.jpg" alt="A picture of an astronaut on the moon"></div>
     </section>
 
     <section id="vid-section">
