--- a/contact.html
+++ b/contact.html
@@ -33,26 +33,31 @@
         </nav>
     </header>
 
-    <section>
-        <div id="hero-image"><img src="assets/images/contact.jpg" alt="A picture of an astronaut on the moon standing next to the lunar lander"></div>
+    <section id="hero">
+        <div id="hero-image"><img class="img-fluid" src="assets/images/contact.jpg" alt="A picture of an astronaut on the moon standing next to the lunar lander"></div>
     </section>
 
     <section id="contact">
         <div class="contact-section">
             <h2>Contact us here</h2>
             <br>
+            <br>
             <form>
                 <label for="name">Name:</label>
                 <input type="text" name="name" id="name" required placeholder="Enter name here">
             <br>
+            <br>
                 <label for="email">Email:</label>
                 <input type="email" name="email" id="email" required placeholder="Enter email here">
+            <br>
             <br>
                 <label for="subject">Subject:</label>
                 <input type="text" name="subject" id="subject" required placeholder="Enter subject here">
             <br>
+            <br>
                 <label for="message">Message:</label>
                 <textarea name="message" id="message" cols="30" rows="10" placeholder="Enter message here"></textarea>
+            <br>
             <br>
                 <input type="submit" id="submit">
             </form>
