--- a/end.html
+++ b/end.html
@@ -33,8 +33,8 @@
         </nav>
     </header>
 
-    <section>
-        <div id="hero-image"><img src="assets/images/command-module.jpeg" alt="A picture of the command module about to enter the earths atmosphere"></div>
+    <section id="hero">
+        <div id="hero-image"><img class="img-fluid" src="assets/images/command-module.jpeg" alt="A picture of the command module about to enter the earths atmosphere"></div>
     </section>
 
     <section id="section1">
@@ -49,7 +49,6 @@
                 precaution agains pathogens that might have been on the moon.
             </p>
         </div>
-        <div id="section1-img"> <img src="assets/images/re-entry-burn.jpg" alt="A picture of the saturn v mid flight"></div>
     </section>
 
     <section id="section2">
@@ -63,7 +62,6 @@
                 . We can reach for the stars just as you have reached so far for the stars."
             </p>
         </div>
-        <div id="section2-img"><img src="assets/images/quarantine-trailer.jpg" alt="A picture of the eagle lander module seperated from the command module, in orbit of the moon"></div>
     </section>
 
     <section id="section3">
@@ -76,7 +74,6 @@
                 and an example of humanity's greatness. The mission was widely considered successful in nearly every respect.
             </p>
         </div>
-        <div id="section3-img"><img src="assets/images/celebration.jpg" alt="A picture of an astronaut on the moon"></div>
     </section>
 
     <section id="vid-section">
