--- a/middle.html
+++ b/middle.html
@@ -33,8 +33,8 @@
         </nav>
     </header>
 
-    <section>
-        <div id="hero-image"><img src="assets/images/moon-landing.jpg" alt="a picture of an astronaut on the moons surface"></div>
+    <section id="hero">
+        <div id="hero-image"><img class="img-fluid" src="assets/images/moon-landing.jpg" alt="a picture of an astronaut on the moons surface"></div>
     </section>
 
     <section id="section1">
@@ -46,7 +46,6 @@
                 moment this was for all of humanity and especially anyone american.
             </p>
         </div>
-        <div id="section1-img"> <img src="assets/images/nixon.jpg" alt="A picture of the saturn v mid flight"></div>
     </section>
 
     <section id="section2">
@@ -57,7 +56,6 @@
                 Neil Armstrong and Buzz Aldrin get back into the eagle and prepare to meet with the command module at around 01:11 EDT.
             </p>
         </div>
-        <div id="section2-img"><img src="assets/images/moon.jpg" alt="A picture of the eagle lander module seperated from the command module, in orbit of the moon"></div>
     </section>
 
     <section id="section3">
@@ -71,7 +69,6 @@
                 and and so began their return to earth.
             </p>
         </div>
-        <div id="section3-img"><img src="assets/images/eagle-launch.jpg" alt="A picture of an astronaut on the moon"></div>
     </section>
 
     <section id="vid-section">
